<resources>
    <string name="app_name">Walkee</string>
    <string name="no_title">！！！没有标题！！！</string>
    <string name="no_content">！！！没有内容！！！</string>
    <string name="mode_choose">模式选择</string>
    <string name="permission_settings">权限设置</string>
    <string name="walk_log">步行记录</string>
    <string name="account_center">个人中心</string>
    <string name="current_status">当前状态</string>
    <string name="walk">行走</string>
    <string name="stand">站立</string>
    <string name="your_current_status_is">您当前的状态是</string>
    <string name="please_put_down_your_smart_phone_while_you_walking">为了您的安全，请在步行时放下手机。</string>
    <string name="statistics">统计</string>
    <string name="walk_distance">步行 + 跑步距离</string>
    <string name="format_day_average">日平均值: %1$d</string>
    <string name="format_distance_km">%1$s 公里</string>
    <string name="time_of_walk_while_using_smart_phone">步行的同时使用手机的次数</string>
    <string name="format_times">%1$d 次</string>
    <string name="ask_username">该如何称呼您呢？</string>
    <string name="click_to_fill_username">点这里告诉我应该如何称呼您</string>
    <string name="nickname">昵称</string>
    <string name="nickname_here">在这里输入你的昵称</string>
    <string name="tag_sg_distance" translatable="false">tag_sg_distance</string>
    <string name="tag_sg_step" translatable="false">tag_sg_step</string>
    <string name="tag_sg_time" translatable="false">sg_time</string>
    <string name="settings">设置</string>
    <string name="account_info">个人资料信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="loading">处理中…</string>
    <string name="summary_permission_settings">添加默许使用的应用程序</string>
    <string name="summary_mode_choose">更改此程序运行的模式</string>
    <string name="hide_system_application">隐藏系统应用</string>
    <string name="title_mode_hard">暴走监管</string>
    <string name="summary_mode_hard">严禁你在步行的时候动用非权限内应用</string>
    <string name="title_mode_easy">温柔提醒</string>
    <string name="summary_mode_easy">在你步行的时候动用权限外软件时进行提醒</string>
    <string name="customize">自定义</string>
    <string name="title_customize_time">设定提醒时间段</string>
    <string name="format_summary_customize_time_on">%1$s - %2$s</string>
    <string name="summary_customize_time_off">全天提醒</string>
    <string name="pref_key_customize_time_switch" translatable="false">customize_time</string>
    <string name="title_customize_time_start">设定开始时间</string>
    <string name="title_customize_time_end">设定结束时间</string>
    <string name="float_alert_title">为了您的安全，使用手机前请先停下脚步</string>
    <string name="float_alert_summary">在您停下之后，本警告条将会自动消失。</string>
    <string name="permission_request">权限请求</string>
    <string name="usage_stats_permission_request_message">要正常使用本应用的权限系统，你需要授予本应用“有权查看使用情况的应用”权限。</string>
    <string name="set_permission_now">现在就去设置</string>
    <string name="usage_stats_permission_denied_message">因为没有“有权查看使用情况的应用”权限，本应用的权限管理功能无法正常工作。</string>
    <string name="fullscreen_lock_message">已锁定你的手机，请停止步行或停止使用手机</string>
    <string name="fullscreen_unlock_message">可爱的你\n\t\t\t是有着急的事儿吗？</string>
    <string name="urgent">急</string>
    <string name="walk_en">Walk</string>
    <string name="step">步数</string>
    <string name="format_step">%1$d 步</string>
</resources>
