<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/item_current_status"
          android:title="@string/current_status"
          android:icon="@drawable/ic_home_black_24dp"
          android:checkable="true"/>

    <item android:id="@+id/item_mode_choose"
          android:title="@string/mode_choose"
          android:icon="@drawable/ic_settings_black_24dp"
          android:checkable="true"/>

    <item android:id="@+id/item_permission_settings"
          android:title="@string/permission_settings"
          android:icon="@drawable/ic_build_black_24dp"
          android:checkable="true"/>

    <item android:id="@+id/item_walk_log"
          android:title="@string/walk_log"
          android:icon="@drawable/ic_directions_walk_black_24dp"
          android:checkable="true"/>

    <item android:id="@+id/item_account_center"
          android:title="@string/account_center"
          android:icon="@drawable/ic_account_circle_black_24dp"
          android:checkable="true"/>

</menu>