<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:ignore="RtlHardcoded">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_status_current_status"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginRight="-2dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:id="@+id/rl_status_current_status_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_sc_card_status_stop"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_status_current_status_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_current_status_is"
                android:textColor="@color/tc_sc_card_status_text"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/tv_status_current_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stand"
                android:textSize="100sp"
                android:textColor="@color/tc_sc_card_status_text"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/tv_status_current_status_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_put_down_your_smart_phone_while_you_walking"
                android:textColor="@color/tc_sc_card_status_text"
                android:textSize="17sp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <TextView
        android:id="@+id/tv_status_category_tag_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/statistics"
        android:textSize="25sp"
        android:textColor="@color/tc_sc_category_tag"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_status_statistics_distance"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginRight="-2dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_sc_card_statistics_distance"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_status_statistics_distance_graph_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:text="@string/walk_distance"
                android:textColor="@color/tc_sc_statistics_graph_title"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_status_statistics_distance_graph_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_status_statistics_distance_graph_title"
                android:layout_alignParentLeft="true"
                android:text="@string/format_day_average"
                android:textColor="@color/tc_sc_statistics_graph_subtitle"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv_status_statistics_distance_graph_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:text="@string/format_distance_km"
                android:textColor="@color/tc_sc_statistics_graph_title"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_status_statistics_distance_graph_recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_status_statistics_distance_graph_today"
                android:layout_alignParentRight="true"
                android:text="今天 上午 10:25"
                android:textColor="@color/tc_sc_statistics_graph_subtitle"
                android:textSize="15sp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_status_statistics_time"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginRight="-2dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_sc_card_statistics_time"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_status_statistics_time_graph_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:text="@string/time_of_walk_while_using_smart_phone"
                android:textColor="@color/tc_sc_statistics_graph_title"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_status_statistics_time_graph_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_status_statistics_time_graph_title"
                android:layout_alignParentLeft="true"
                android:text="@string/format_day_average"
                android:textColor="@color/tc_sc_statistics_graph_subtitle"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv_status_statistics_time_graph_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:text="@string/format_times"
                android:textColor="@color/tc_sc_statistics_graph_title"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_status_statistics_time_graph_recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_status_statistics_time_graph_today"
                android:layout_alignParentRight="true"
                android:text="今天 上午 10:25"
                android:textColor="@color/tc_sc_statistics_graph_subtitle"
                android:textSize="15sp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>