<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:ignore="RtlHardcoded">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_walklog_statistics_step"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginRight="-2dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/bg_sc_card_statistics_step">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_mountain_blue"
            android:scaleType="fitStart"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/rl_walklog_statistics_step_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <TextView
                    android:id="@+id/tv_walklog_statistics_step_graph_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/step"
                    android:textColor="@color/tc_sc_statistics_graph_title_blue"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_walklog_statistics_step_graph_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_walklog_statistics_step_graph_title"
                    android:layout_alignParentLeft="true"
                    android:text="@string/format_day_average"
                    android:textColor="@color/tc_sc_statistics_graph_subtitle_blue"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_walklog_statistics_step_graph_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/format_step"
                    android:textColor="@color/tc_sc_statistics_graph_title_blue"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_walklog_statistics_step_graph_recent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_walklog_statistics_step_graph_today"
                    android:layout_alignParentRight="true"
                    android:text="今天 上午 10:25"
                    android:textColor="@color/tc_sc_statistics_graph_subtitle_blue"
                    android:textSize="15sp"/>

            </RelativeLayout>

            <moe.haruue.walkee.ui.widget.StatisticsBarGraph
                android:tag="@string/tag_sg_step"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rl_walklog_statistics_step_info_container"
                android:layout_marginTop="5dp"
                app:barBackground="@color/material_color_white"
                app:barWidth="@dimen/width_stat_graph_bar"
                app:hrColor="@color/material_color_white"
                app:textColor="@color/material_color_white"
                app:textSize="@dimen/ts_stat_graph_bar"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_walklog_statistics_time"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginRight="-2dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_sc_card_statistics_time"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/rl_walklog_statistics_time_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <TextView
                    android:id="@+id/tv_walklog_statistics_time_graph_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/time_of_walk_while_using_smart_phone"
                    android:textColor="@color/tc_sc_statistics_graph_title"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_walklog_statistics_time_graph_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_walklog_statistics_time_graph_title"
                    android:layout_alignParentLeft="true"
                    android:text="@string/format_day_average"
                    android:textColor="@color/tc_sc_statistics_graph_subtitle"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_walklog_statistics_time_graph_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/format_times"
                    android:textColor="@color/tc_sc_statistics_graph_title"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_walklog_statistics_time_graph_recent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_walklog_statistics_time_graph_today"
                    android:layout_alignParentRight="true"
                    android:text="今天 上午 10:25"
                    android:textColor="@color/tc_sc_statistics_graph_subtitle"
                    android:textSize="15sp"/>

            </RelativeLayout>

            <moe.haruue.walkee.ui.widget.StatisticsBarGraph
                android:tag="@string/tag_sg_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rl_walklog_statistics_time_info_container"
                android:layout_marginTop="5dp"
                app:barBackground="@color/material_color_white"
                app:barWidth="@dimen/width_stat_graph_bar"
                app:hrColor="@color/material_color_white"
                app:textColor="@color/material_color_white"
                app:textSize="@dimen/ts_stat_graph_bar"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>